@@ -134,6 +134,7 @@ _directive_registry = {
       'role': ('misc', 'role'),
       'default-role': ('misc', 'default_role'),
       'title': ('misc', 'title'),
+      'date': ('misc', 'date'),
       'restructuredtext-test-directive': ('misc', 'directive_test_function'),}
 """Mapping of directive name to (module name, function name).  The directive
 name is canonical & must be lowercase.  Language-dependent names are defined
